# routes/api/v1.php
@@ -5,7 +5,7 @@
 Route::group(['middleware' => 'member.auth'], function () {
     // Reserve Book
     Route::post('books/{book_item}/reserve-book', 'IssuedBookAPIController@reserveBook')
-        ->name('reserve-book');;
+        ->name('reserve-book');
     // Un-Reserve Book
     Route::post('books/{book_item}/un-reserve-book', 'IssuedBookAPIController@unReserveBook')
         ->name('un-reserve-book');
